syntax = "proto3";

package db;

option go_package = "proto/db;db";


message LoginRequest {
  string username = 1;
  string password = 2;
}


message LoginResponse {
  int32 error = 1;
  string token = 2;
  int32 user_id = 3;
}


message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  int32 error = 1;
  int32 user_id = 2;
}


message DepositRequest {
  string token = 1;          
  string transaction_id = 2; 
  double amount = 3;         
  int64 timestamp = 4;       
}


message DepositResponse {
  int32 error = 1;
  double balance = 2;
}


message WithdrawRequest {
    string token = 1;          
    string transaction_id = 2; 
    double amount = 3;
    int64 timestamp = 4;
}


message WithdrawResponse {
  int32 error = 1;
  double balance = 2;
}


message GetBalanceRequest {
  string token = 1;
}

message GetBalanceResponse {
  int32 error = 1;
  double balance = 2;
}


service DBService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc Deposit(DepositRequest) returns (DepositResponse);
  rpc Withdraw(WithdrawRequest) returns (WithdrawResponse);
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
}
